0028367: Draw Harness - XSave should print an error on store failure